--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,17 @@ body {
   animation: 1.5s forwards ease-out scale-effect-in-visit;
 }
 
+.cube.visitNoAnimate::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #0fbed8;
+}
+
 .cube.marker::before {
   content: "";
   display: block;
@@ -75,6 +86,17 @@ body {
   height: 100%;
   background-color: rgb(255, 255, 143);
   animation: 0.3s forwards ease-in-out scale-effect-in2;
+}
+
+.cube.markerNoAnimate::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 143);
 }
 
 @keyframes scale-effect-in {
