--- a/src/app/comps/navbar/navbar.component.scss
+++ b/src/app/comps/navbar/navbar.component.scss
@@ -6,33 +6,18 @@
   background-color: #3a3a3a;
 }
 
-.title {
-  line-height: 43px;
-  background-color: #fff;
-  box-shadow: 0 5px 15px 0 rgb(0 0 0 / 25%);
-  width: 160px;
-  color: #000;
-  font-size: 17px;
-  margin: 0;
-  font-family: "Russo One", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title span {
-  color: #1abc9c;
-  text-align: center;
-  font-weight: 700;
-}
-
 .container {
-  margin-right: 5px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.container > * {
-  margin: 0 2.5px;
+.container button {
+  margin: 5px;
 }
+
+// .container > * {
+//   margin: 0 2.5px;
+// }
 
 :host {
   ::ng-deep {
@@ -87,4 +72,39 @@
       left: 100px;
     }
   }
+}
+
+/* Big tablets to 1200px (widths smaller then 1140px row)*/
+@media only screen and (max-width: 1200px) {
+  .small {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .small {
+    display: none;
+  }
+}
+
+/* Small tablets to big tablets from 767px - 1023px */
+@media only screen and (max-width: 1023px) {
+  app-logo {
+    display: none;
+  }
+}
+
+/* Small phones to small tablets from 481px - 767px */
+@media only screen and (max-width: 767px) {
+  .big {
+    display: none;
+  }
+
+  .small {
+    display: block;
+  }
+}
+
+/* Small phones from 0 - 480px */
+@media only screen and (max-width: 480px) {
 }
